# Handshaker

./: .gitignore  .version-tracking.md  CHANGELOG.md  Cargo.toml  Dockerfile  FINDING_AUDIT_MATRIX.md  FINDING_INDEX.MD  Makefile  README.md
.github/workflows/: ci.yml  release.yml
policies/: cis-like.yml  default.yml  nist-800-52r2.yml  pci-dss.yml
rsc/: handshake_support_prompt.md
scripts/: README.md  check_finding_index_sync.py  generate_finding_audit_matrix.py  install.ps1  install.sh
src/: cli.rs  errors.rs  lib.rs  main.rs  models.rs
src/ai/: mod.rs  prompt.rs  providers.rs  redaction.rs
src/benchmark/: evaluator.rs  mod.rs
src/compliance/: mod.rs  policy_loader.rs
src/diff/: compare.rs  mod.rs
src/engine/: async_runner.rs  dispatcher.rs  mod.rs
src/findings/: catalog.rs  explain.rs  mod.rs  types.rs
src/input/: file.rs  mod.rs  nmap_grep.rs  nmap_xml.rs  nuclei_json.rs  scan_json.rs  stdin.rs  target_parse.rs
src/output/: csv.rs  html.rs  json.rs  mod.rs  sqlite.rs  table.rs  text.rs
src/protocols/: mod.rs
src/protocols/rdp/: mod.rs  probe.rs
src/protocols/ssh/: algos.rs  banner.rs  hostkey.rs  mod.rs
src/protocols/tls/: alpn.rs  certs.rs  ciphers.rs  mod.rs  posture.rs  probe.rs  scenarios.rs  starttls.rs  (+1 more)
src/scoring/: aggregate.rs  cvss.rs  mod.rs  ssllabs.rs
templates/: explain.md  report.html
tests/: benchmark_eval.rs  catalog.rs  catalog_audit.rs  cvss.rs  cvss_edges.rs  diff.rs  finding_index_sync.rs  input_edge_cases.rs  input_parsers.rs  policy_eval.rs  runtime_edges.rs  scoring.rs  target_parsing.rs  tls_probe.rs
