[package]
name = "handshaker"
version = "7.5.0"
edition = "2021"
authors = ["Gilles Biagomba and contributors"]
license = "GPL-3.0"
description = "Handshaker: native Rust secure-transport posture engine"
repository = "https://github.com/gbiagomba/WeakSSL"
readme = "README.md"
keywords = ["tls", "ssh", "rdp", "scanner", "security"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
foreign-types-shared = "0.1"
ssh2 = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
csv = "1.3"
comfy-table = "7.1"
html-escape = "0.2"
rand = "0.10"
hex = "0.4"
quick-xml = "0.39"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
# Note: quick-xml is used for parsing nmap XML.
